--- a/4.23.md
+++ b/4.23.md
@@ -3,3 +3,5 @@
 ![image.png](https://s2.loli.net/2022/04/24/Qhan9Bx6qDGl8gm.png)
 ![image.png](https://s2.loli.net/2022/04/24/o4YshuzH2KGcUFq.png)
 ![image.png](https://s2.loli.net/2022/04/24/EkqyDUApiJ2P5Tb.png)
+![image.png](https://s2.loli.net/2022/04/24/tHf19nhekBYr7Ku.png)
+![image.png](https://s2.loli.net/2022/04/24/n7uDMvLTJOIzy9B.png)
