--- a/5.19.md
+++ b/5.19.md
@@ -7,3 +7,9 @@
 ![IMG_0831.jpg](https://s2.loli.net/2022/05/22/FdUQuZKigsCMHe7.jpg)
 ![IMG_0723.jpg](https://s2.loli.net/2022/05/22/EnTmfAW43e8kIsS.jpg)
 ![IMG_0737.jpg](https://s2.loli.net/2022/05/22/D5mKxvPydcFkqhS.jpg)
+![IMG_0662.jpg](https://s2.loli.net/2022/05/22/YsoR1aWcm8vPQzn.jpg)
+![IMG_0794.jpg](https://s2.loli.net/2022/05/22/b4ysa7wUnKLMolX.jpg)
+![IMG_0774.jpg](https://s2.loli.net/2022/05/22/JIjp43oVyF5tczu.jpg)
+![IMG_0833.jpg](https://s2.loli.net/2022/05/22/qaiM8N2zHJVhuZ5.jpg)
+![IMG_0766.jpg](https://s2.loli.net/2022/05/22/VOk5iywIZxbolm2.jpg)
+![IMG_0775.jpg](https://s2.loli.net/2022/05/22/H14PCNtYM2Wrbgx.jpg)
